# repuestero

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_esquema_nucleo.py  0002_busqueda_hibrida.py  0003_rol_readonly.py  0004_ingesta_visual.py  0005_ventas.py  0006_cuenta_corriente.py  0007_notas_credito.py  0008_compras.py
app/: main.py
app/asistente/: esquema.py  grafo.py  llm.py  router.py  schemas.py  seguridad.py  service.py  sql_guard.py
app/catalogo/: models.py  reindex.py  router.py  schemas.py  service.py
app/clientes/: models.py  router.py  schemas.py  service.py
app/compatibilidad/: models.py  router.py  service.py
app/compras/: models.py  router.py  schemas.py  service.py
app/core/: base.py  config.py  db.py  embeddings.py  models.py  ratelimit.py  registry.py  rls.py  security.py
app/dashboard/: router.py  schemas.py  service.py
app/importador/: __main__.py  loader.py
app/importador/readers/: base.py  csv_reader.py  paradox_reader.py
app/ingesta_visual/: extractor.py  flags.py  imagen.py  models.py  router.py  schemas.py  service.py
app/inventario/: models.py  service.py
app/proveedores/: models.py  router.py  schemas.py  service.py
app/ventas/: models.py  router.py  schemas.py  service.py
docs/: analisis-legacy.md  blueprint.md  deploy.md  gotchas.md
docs/adr/: 0001-offline-first-mostrador.md
frontend/: env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: verify_stream.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx  router.tsx
frontend/src/entities/articulo/: ArticuloTable.tsx  schema.ts
frontend/src/entities/cliente/: ClienteTable.tsx  schema.ts
frontend/src/entities/compra/: schema.ts
frontend/src/entities/message/: MessageBubble.test.tsx  MessageBubble.tsx  types.ts
frontend/src/entities/nota-credito/: schema.ts
frontend/src/entities/proveedor/: schema.ts
frontend/src/entities/remito/: formato.ts  schema.ts
frontend/src/entities/sql-result/: ResultTable.tsx
frontend/src/entities/venta/: schema.ts
frontend/src/features/dashboard/: schema.test.ts  schema.ts
frontend/src/features/ui-shell/: drawerStore.ts
frontend/src/pages/catalogo/: ArticuloPage.tsx  CatalogoPage.tsx
frontend/src/pages/clientes/: ClientesPage.tsx
frontend/src/pages/compatibilidad/: CompatibilidadPage.tsx
frontend/src/pages/compras/: ComprasPage.tsx
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/ingesta-visual/: IngestaVisualPage.tsx
frontend/src/pages/proximamente/: ProximamentePage.tsx
scripts/: init_db.sql  supabase_roles.sql
seeds/: generar_demo.py  generar_ventas_demo.py
seeds/demo/: articulo_aplicaciones.csv  articulo_precios.csv  articulo_proveedores.csv  articulos.csv  clientes.csv  depositos.csv  listas_precio.csv  proveedores.csv  stock_inicial.csv  vehiculos.csv
tests/: conftest.py  test_asistente.py  test_busqueda.py  test_catalogo.py  test_compras.py  test_cta_cte.py  test_dashboard.py  test_embeddings.py  test_ingesta_confirmar.py  test_ingesta_multimodal.py  test_ingesta_primitivas.py  test_ingesta_propuesta.py  test_ingesta_router.py  test_notas_credito.py  test_rls_aislamiento.py  test_ventas.py
(+69 files in other folders)
